// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownItem /> should not render if the item value is not contained in the context query 1`] = `null`;

exports[`<DropdownItem /> should render 1`] = `
<li
  class="item"
  role="option"
  tabindex="0"
>
  Foo
</li>
`;

exports[`<DropdownItem /> should render when selected and multiple selection is enabled 1`] = `
<li
  class="item"
  role="option"
  tabindex="0"
>
  <div
    class="checkbox"
  >
    <label
      class="ui-label-label-3864 label"
      for="checkbox-1"
    >
      <input
        checked=""
        class="input"
        id="checkbox-1"
        name="checkbox-1"
        tabindex="-1"
        type="checkbox"
      />
    </label>
  </div>
  Foo
</li>
`;

exports[`<DropdownItem /> should render with any HTML tag passed as tag 1`] = `
<div
  class="item"
  role="option"
  tabindex="0"
>
  Foo
</div>
`;
